inter/Tests/Invalid/dupedvalues.intert
packagetype _plain
packagetype _code

package main _plain
	typename K_number = int32
	typename K_odour = enum
	instance (K_odour) I_citrus
	instance (K_odour) I_leather
	property (K_number) P_strength
	permission for K_odour to have P_strength
	propertyvalue P_strength of I_citrus = 20
	propertyvalue P_strength of I_leather = 7
	property (K_number) P_lingeringness
	permission for K_odour to have P_lingeringness
	permission for K_odour to have P_lingeringness
	propertyvalue P_lingeringness of I_citrus = 1
	propertyvalue P_lingeringness of I_leather = 3
	propertyvalue P_lingeringness of I_leather = 6
	permission for K_number to have P_lingeringness
	typename K_colour = enum
	instance (K_colour) I_green
	propertyvalue P_lingeringness of I_green = 27
